--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h1>Spletno sredisce nevidne umetniske kreacije</h1>
 	<hr>
 	<figure>
-		<img src="peklenska.jpg"
+		<img src="image/peklenska.jpg"
 			 width = "70%" alt = "Peklenska Pomaranca">
 		<figcaption>Gledaliska Predstava Peklenska Pomaranca</figcaption>
 	</figure>
